--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ junit = "5.11.4"
 androidJunit5 = "1.13.1.0"
 mockito = "5.18.0"
 mockitoKotlin = "6.0.0"
+turbine = "1.2.1"
 
 [libraries]
 
@@ -81,6 +82,9 @@ junit5-jupiter-params = { group = "org.junit.jupiter", name = "junit-jupiter-par
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 mockito-junit-jupiter = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
+
+# Turbine
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 
 
 [plugins]
