--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,12 +17,14 @@ room = "2.7.2"
 ksp = "2.2.0-2.0.2"
 dataStore = "1.1.7"
 kermit = "2.0.6"
+#noinspection NewerVersionAvailable
 junit = "5.11.4"
 androidJunit5 = "1.13.1.0"
 mockito = "5.18.0"
 mockitoKotlin = "6.0.0"
 turbine = "1.2.1"
 navigation3 = "1.0.0-alpha05"
+lifeCycleViewmodelNavigation3 = "1.0.0-alpha03"
 
 [libraries]
 
@@ -43,11 +45,13 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 # AnroidX Navigation 3
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "navigation3" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "navigation3" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifeCycleViewmodelNavigation3" }
 
 # Koin
 koin-bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin" }
 koin = { group = "io.insert-koin", name = "koin-core" }
 koin-android = { group = "io.insert-koin", name = "koin-android" }
+koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose" }
 koin-test = { group = "io.insert-koin", name = "koin-test" }
 koin-test-junit5 = { group = "io.insert-koin", name = "koin-test-junit5" }
 
