--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: ./gradlew ktlintCheck
 
       - name: Build
-        run: ./gradlew clean build test
+        run: ./gradlew clean buildDebug
 
       - name: Unit Tests
         run: ./gradlew test
