QUIZAPP-8: Create Result Screen with Score and Pass/Fail

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ mockitoKotlin = "6.0.0"
 turbine = "1.2.1"
 navigation3 = "1.0.0-alpha05"
 lifeCycleViewmodelNavigation3 = "1.0.0-alpha03"
+konfetti = "2.0.5"
 
 [libraries]
 
@@ -94,6 +95,9 @@ mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", versio
 
 # Turbine
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+
+# Konfetti
+konfetti-compose = { group = "nl.dionsegijn", name = "konfetti-compose", version.ref = "konfetti"}
 
 
 [plugins]
